--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "dev": "npm-run-all --silent --parallel dev:*",
     "dev:client": "webpack-dev-server",
     "dev:server": "nodemon server/index.js",
+    "db:import": "source .env; psql $DATABASE_URL < database/dump.sql",
+    "db:export": "source .env; pg_dump -c -O $DATABASE_URL > database/dump.sql",
     "start": "NODE_ENV=development node server/index.js"
   },
   "repository": {
