--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
   },
   "homepage": "https://github.com/a-canlas/react-boilerplate#readme",
   "dependencies": {
+    "bootstrap": "^4.5.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "pg": "^8.3.0",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "session-file-store": "^1.4.0"
   },
