--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "google-maps-react": "^2.0.6",
     "pg": "^8.3.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
